fix for post overlay on mobile

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -4217,7 +4217,7 @@ body.front.logged-in {
 
 // Login & Signup Form
 #user-login, #user-register-form {
-  input[type="text"] {
+  input[type="text"], input[type="password"] {
     width: 100%;
   }
 }
