--- a/sass/responsive.custom.scss
+++ b/sass/responsive.custom.scss
@@ -58,6 +58,12 @@
   #branding {
     margin-right: 6px;
   }
+
+  .commons-bw-create-all-widget-types {
+    left: -100px;
+    top: auto;
+    bottom: 0;
+  }
 }
 
 
